# dx-modelzoo

./: RELEASE_NOTES.md  RELEASE_NOTES_MATERIAL.md  install.sh  pyproject.toml  setup.py
docs/: make_html.md  mkdocs.yml
docs/source/docs/: Dataset.md
scripts/: common_util.sh  install_python_and_venv.sh
src/dx_modelzoo/: enums.py  main.py
src/dx_modelzoo/commands/: __init__.py
src/dx_modelzoo/dataset/: bsd100.py  cbsd68.py  celeba.py  cityscapes.py  coco_pose.py  dotav1.py  face_landmark.py  hand_landmark.py  lfw.py  lol.py  market1501.py  nyu.py  oxford_pet.py  peta.py
src/dx_modelzoo/evaluator/: __init__.py  bsd100_evaluator.py  bsd68_evaluator.py  clip_evaluator.py  coco_evaluator.py  coco_pose_evaluator.py  depth_estimation_evaluator.py  face_attribute_evaluator.py  face_landmark_evaluator.py  hand_landmark_evaluator.py  ic_evaluator.py  instance_seg_evaluator.py  lfw_evaluator.py  lol_evaluator.py  obb_evaluator.py  person_attribute_evaluator.py  person_reid_evaluator.py  segmentation_evaluator.py  voc_evaluator.py  widerface_evaluator.py  zeroshot_instance_seg_evaluator.py
src/dx_modelzoo/factory/: model_factory.py
src/dx_modelzoo/factory/dicts/: data_dict.py  eval_dict.py  model_dict.py
src/dx_modelzoo/models/: __init__.py
src/dx_modelzoo/models/depth_estimation/: fast_depth.py  scdepth.py
src/dx_modelzoo/models/face_attribute/: face_attr_resnet.py
src/dx_modelzoo/models/face_detection/: __init__.py  retinaface.py  scrfd.py  ulfgfd.py  yolo.py
src/dx_modelzoo/models/face_landmark/: bfm_decoder.py  tddfa_v2.py
src/dx_modelzoo/models/face_recognition/: arcface.py
src/dx_modelzoo/models/hand_landmark/: mediapipe_hands.py
src/dx_modelzoo/models/image_classification/: alexnet.py  casvit.py  convnext.py  densenet.py  efficientformer.py  efficientnet.py  fastvit.py  ghostnet.py  googlenet.py  hardnet.py  inception.py  levit.py  mambaout.py  maxvit.py  mnasnet.py  mobilenet.py  osnet.py  (+14 more)
src/dx_modelzoo/preprocessing/: bgr_to_y_channel.py  bgr_to_y_channel_uint8.py  enums.py  resize.py
src/dx_modelzoo/session/: dx_runtime_session.py  onnx_runtime_session.py
src/dx_modelzoo/tools/: DXRT_eval.py  ONNXRT_eval.py  model_comparison.py
src/dx_modelzoo/utils/: detection.py
(+29 files in other folders)
